--- a/IfStatement_Mikael.ipynb
+++ b/IfStatement_Mikael.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d5e80cf",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "174e93bc",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cc8057f2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c29ddac7",
    "metadata": {},
    "outputs": [
@@ -62,27 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8f5222ce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2468845593.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mf number1 != number2:\u001b[39m\n      ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "f number1 != number2:\n",
+    "if number1 != number2:\n",
     "    print(\"number1 is not the same as number2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "685944e8",
    "metadata": {},
    "outputs": [],
@@ -94,10 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8a82f852",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all numbers are the same\n"
+     ]
+    }
+   ],
    "source": [
     "if number1 == number2 and number2 == number3:\n",
     "    print(\"all numbers are the same\")"
@@ -105,10 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ea136dfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Either number1 and number2 or number2 and number3 are equal\n"
+     ]
+    }
+   ],
    "source": [
     "if number1 == number2 or number2 == number3:\n",
     "    print(\"Either number1 and number2 or number2 and number3 are equal\")"
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a62a07ce",
    "metadata": {},
    "outputs": [],
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "967a2a8f",
    "metadata": {},
    "outputs": [],
@@ -141,10 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ed4577ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number1 and number2 are the same\n"
+     ]
+    }
+   ],
    "source": [
     "if number1 == number2:\n",
     "    print(\"number1 and number2 are the same\")\n",
@@ -155,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ea7b075d",
    "metadata": {},
    "outputs": [],
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5792cbd3",
    "metadata": {},
    "outputs": [],
@@ -178,10 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "90314339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name1 and name2 are not the same\n"
+     ]
+    }
+   ],
    "source": [
     "if name1 != name2:\n",
     "    print(\"name1 and name2 are not the same\")"
@@ -189,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "366eb2e8",
    "metadata": {},
    "outputs": [],
