--- a/GuessingGame_Mikael.ipynb
+++ b/GuessingGame_Mikael.ipynb
@@ -22,12 +22,12 @@
     "if guess == rightName:\n",
     "    print(\"Correct\")\n",
     "else:\n",
-    "    print(\"axse46gWrong\")"
+    "    print(\"Wrong\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bb8ff6fb",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correct\n"
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n",
+      "Wrong\n"
      ]
     }
    ],
@@ -47,6 +54,8 @@
     "    guess = input(\"Guess the name: \")\n",
     "    if guess == rightName:\n",
     "        print(\"Correct\")\n",
+    "    else:\n",
+    "        print(\"Wrong\")\n",
     "    "
    ]
   }
